packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-stable/typed-uris-invalid-syntax.stderr
error: expected identifier
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:10:28
   |
10 |     uri!(simple: id = 100, "Hello");
   |                            ^^^^^^^

error: named and unnamed parameters cannot be mixed
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:11:17
   |
11 |     uri!(simple(id = 100, "Hello"));
   |                 ^^

error: named and unnamed parameters cannot be mixed
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:12:17
   |
12 |     uri!(simple("Hello", id = 100));
   |                 ^^^^^^^

error: unexpected token
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:14:16
   |
14 |     uri!(simple:);
   |                ^

error: invalid URI: unexpected EOF: expected token ':' at index 5
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:16:10
   |
16 |     uri!("mount", simple);
   |          ^^^^^^^

error: invalid URI: unexpected EOF: expected token ':' at index 5
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:17:10
   |
17 |     uri!("mount", simple, "http://");
   |          ^^^^^^^

error: URI suffix must contain only query and/or fragment
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:18:28
   |
18 |     uri!("/mount", simple, "http://");
   |                            ^^^^^^^^^

error: expected 1, 2, or 3 arguments, found 4
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:19:36
   |
19 |     uri!("/mount", simple, "#foo", "?foo");
   |                                    ^^^^^^

error: invalid URI: unexpected EOF: expected token ':' at index 5
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:20:10
   |
20 |     uri!("mount", simple(10, "hi"), "http://");
   |          ^^^^^^^

error: URI suffix must contain only query and/or fragment
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:21:38
   |
21 |     uri!("/mount", simple(10, "hi"), "http://");
   |                                      ^^^^^^^^^

error: URI prefix cannot contain query part
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:22:10
   |
22 |     uri!("/mount?foo", simple(10, "hi"), "foo/bar?foo#bar");
   |          ^^^^^^^^^^^^

error: URI suffix must contain only query and/or fragment
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:23:38
   |
23 |     uri!("/mount", simple(10, "hi"), "a/b");
   |                                      ^^^^^

error: expected 1, 2, or 3 arguments, found 4
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:24:46
   |
24 |     uri!("/mount", simple(10, "hi"), "#foo", "?foo");
   |                                              ^^^^^^

error: invalid URI: unexpected token '<' at index 7
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:25:10
   |
25 |     uri!("/mount/<id>", simple);
   |          ^^^^^^^^^^^^^

error: expected at least 1 argument, found none
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:26:5
   |
26 |     uri!();
   |     ^^^^^^
   |
   = note: this error originates in the macro `uri` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:27:16
   |
27 |     uri!(simple: id = );
   |                ^

error: unexpected end of input, expected expression
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:28:22
   |
28 |     uri!(simple(id = ));
   |                      ^

error: invalid URI: unexpected EOF: expected some token at index 0
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:29:10
   |
29 |     uri!("*", simple(10), "hi");
   |          ^^^

error: URI suffix must contain only query and/or fragment
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:30:40
   |
30 |     uri!("some.host:8088", simple(10), "hi");
   |                                        ^^^^

error: expected identifier
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:33:18
   |
33 |     uri!("/foo", "bar");
   |                  ^^^^^

error: unexpected token
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:34:17
   |
34 |     uri!("/foo" ("bar"));
   |                 ^^^^^^^

error: URI prefix cannot contain query part
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:35:10
   |
35 |     uri!("ftp:?", index);
   |          ^^^^^^^

error: URI suffix must contain only query and/or fragment
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:36:25
   |
36 |     uri!("ftp:", index, "foo#bar");
   |                         ^^^^^^^^^

error: URI suffix must contain only query and/or fragment
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:37:25
   |
37 |     uri!("ftp:", index, "foo?bar");
   |                         ^^^^^^^^^

error: route expects 2 parameters but 0 were supplied
         --- note: route `simple` has uri "/<id>/<name>"
  --> tests/ui-fail-stable/typed-uris-invalid-syntax.rs:13:10
   |
13 |     uri!(simple,);
   |          ^^^^^^
